# mlops

./: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements-pinned.txt  requirements.txt
agentops/: __init__.py  cli.py  config.py  settings.py
agentops/backends/: __init__.py  aws.py  deploy_local.py  interfaces.py  monitor_local.py  storage_local.py
agentops/configs/: __init__.py  local.json  model_config.json  production.json  prompt_template.json  thresholds.json
agents/: __init__.py  mcp_client.py  requirements.txt  tracing.py
configs/: local.json  model_config.json  production.json  prompt_template.json  quality_score_spec.md  thresholds.json
dashboard/: next.config.ts  package-lock.json  package.json
docs/: aws-setup-guide.md  flow.md  implementation_plan.md  local-dev-guide.md  mcp-integration-guide.md  poc-spike-checklist.md  poc-spike-report.md  state_graph_design.md  system_architecture_design.md  test.md  thesis_proposal_AgentOps.md
eval-datasets/: baseline_v1.json  validation_suite_v1.json
mcp-servers/: __init__.py
mcp_servers/: __init__.py
poc/: echo_agent.py  echo_mcp_server.py  requirements.txt
scripts/: e2e_test.py  release.py  run_experiments.py  run_product_test.py  seed-baseline-local.py  seed-baseline.py  setup-ec2.sh  setup-local.sh  summarize_experiments.py
target-app/: __init__.py  app.py  config.py  models.py  requirements.txt  translator.py
tests/: test_mcp_discovery.py  test_migration_public_api.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_review_fixes.py
(+86 files in other folders)
